--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      Check Out Available Passes
-    </header>
+    <div class="header">
+      <h1>Check Out Available Passes</h1>
+    </div>
 
     <div class="passes">
       <div class="pass">
@@ -32,8 +33,6 @@
           <button>Buy</button>
         </ul>
       </div>
-    </div>
-    <div class="passes">
       <div class="pass">
         <a href="#">
           <img src="images/pic2.png.jpg" alt="Event" />
@@ -56,9 +55,6 @@
           <button>Buy</button>
         </ul>
       </div>
-    </div>
-
-    <div class="passes">
       <div class="pass">
         <a href="#">
           <img src="images/pic3.png.jpg" alt="Event" />
